--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <title>Test</title>
+
 <body>
-    
+
     <p>Hello World!</p>
-    <marquee><p><img width ="100px" src="https://managaming.shop/cdn/shop/products/1e976131-fbae-57a8-aaaf-3cd43a943a24_d2302ca9-ebe6-4615-8243-116e6b7bd1ac_800x.jpg?v=1697403147"/></p></marquee>
+    <marquee>
+        <p>
+            <img width="100px"
+                src="https://managaming.shop/cdn/shop/products/1e976131-fbae-57a8-aaaf-3cd43a943a24_d2302ca9-ebe6-4615-8243-116e6b7bd1ac_800x.jpg?v=1697403147" />
+        </p>
+    </marquee>
 
 </body>
